/***********************************************************************
 X3 ChangeLog

2006-12-26  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Removed scan voiced/halfops/ops SET options.
	Added 4 new except levels, EXCEPTADVLEVEL, EXCEPTBADWORDLEVEL,
	EXCEPTFLOODLEVEL, and EXCEPTSPAMLEVEL. Users equal or above to
	the specified levels will be exempt. All levels default to
	UL_OP (200) at first.

	* src/spamserv.h: Added new except variables.

	* src/spamserv.help: Added new sections for the new except SET
	options, plus removed the level lines for now.

2006-12-25  Neil Spierling  <sirvulcan@gmail.com>

	* Merry Christmas! :)

	* src/spamserv.c: Meh cant sleep damn people outside. Fixed a bug
	with setting exceptlevel.

2006-12-24  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fixed incorrect message when .dellamer is used on a
	nickname.

2006-12-25  Neil Spierling  <sirvulcan@gmail.com>

	* Merry Christmas! :)

	* This completes RFE 1577823.

	* src/spamserv.c: Added EXCEPTLEVEL, this replaces the code that
	excepts all people who are opped etc. Only people above this level
	will be immune now. Defaults to 300 for channels without the option

	* src/spamserv.h: Added exceptlevel.

	* src/spamserv.help: Added EXCEPTLEVEL.

2006-12-25  Neil Spierling  <sirvulcan@gmail.com>

	* Merry Christmas! :)

	* src/spamserv.c: Added trusted accounts support (RFE 1577823).

	* src/spamserv.help: ADDTRUST, DELTRUST, OADDTRUST, ODELTRUST,
	and LISTTRUST added.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/Makefile.in: undo temp fix

	* src/opserv.c: perm fix to HAVE_TRACK define problems

	* src/configure.in: perm fix to HAVE_TRACK define problems

	* src/config.h.in: perm fix to HAVE_TRACK define problems

2006-12-21  Neil Spierling  <sirvulcan@gmail.com>

	* src/Makefile.in: Temp fix.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/proto-p10.c: added full mark support including as a trace
	criteria.
